--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ p.imagen-hack{
 @media (max-width: 768px) and (min-width: 0px){
     .boton{
         display: block;
-        margin: 7px 15px 0px 0px;
+        margin: 19px 15px 0px 0px;
         width: 8%;
     }
     .nav-list-father{
@@ -303,6 +303,9 @@ p.imagen-hack{
     h1{
         font-size: 2em;
         width: 80%;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        
     }
     h3{
         font-size: 1.6em;
